# coding_agent

./: .gitignore  .gitlab-ci.yml  AGENT_LOG.md  Dockerfile  PLAN.md  README.md  REFLECTION.md  SPEC.md  SPEC_PROCESS.md  pyproject.toml  render.yaml
.github/workflows/: ci.yml
src/safe_test_repair_harness/: action_parser.py  agent_loop.py  cli.py  config.py  credentials.py  demo.py  feedback.py  guardrails.py  llm.py  memory.py  models.py  process_runner.py  stop_policy.py  tools.py  webui.py
tests/: test_action_parser.py  test_agent_loop.py  test_ci_config.py  test_cli_demos.py  test_cli_scaffold.py  test_config_loader.py  test_credentials.py  test_deployment_contract.py  test_docker_metadata.py  test_feedback_analyzer.py  test_guardrails.py  test_llm_provider.py  test_memory.py  test_models.py  test_process_runner.py  test_readme_contract.py  test_stop_policy.py  test_submission_evidence_contract.py  test_tool_dispatcher.py  test_webui.py
tests/fixtures/config/: minimal.toml  unsafe.toml
tests/fixtures/pytest_outputs/: assertion_failure.txt  import_error.txt  pass.txt  syntax_error.txt  timeout.txt
