[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "safe-test-repair-harness"
version = "0.1.0"
description = "Safe Test-Repair Coding Harness"
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
safe-repair = "safe_test_repair_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
